# cif-cli

./: .gitignore  .pre-commit-config.yaml  README.md  extract_models_from_struct.py  pyproject.toml  requirements.txt  setup.py
cif_cli/: __main__.py
cif_cli/cli/: parser.py
cif_cli/transformations/: transform.py
movies/: movie_maker.py  traj_1.cif  traj_2.cif  traj_3.cif  traj_4.cif  traj_5.cif
sampleinput/: 5tj3.cif  7g93.cif
src/cif_cli/: __init__.py  __main__.py
src/cif_cli/cli/: __init__.py  parser.py
src/cif_cli/flexpepdock/: flexpepdock.py
src/cif_cli/transformations/: __init__.py  transform.py
src/cif_cli/util/: __init__.py  biopython.py  pyrosetta.py
src/tests/: test_parser.py  test_transformation.py  test_util.py
src/tests/test_transformation/: 7g93.cif
